# 3171599-Camilo-Andres-Ortiz

./: README.md  package-lock.json  pyproject.toml
3171599-F-Camilo-Andres-Ortiz/week-2/: README.md  database.py  main.py  pyproject.toml  schemas.py
3171599-F-Camilo-Andres-Ortiz/wook-3/: database.py  dependencies.py  main.py  pyproject.toml  schemas.py
3171599-F-Camilo-Andres-Ortiz/wook-3/routers/: corridors.py  remittances.py
3171599-R-Camilo-Andres-Ortiz/week-2/: README.md  index.html  package.json
3171599-R-Camilo-Andres-Ortiz/week-2/src/: App.tsx  main.tsx
3171599-R-Camilo-Andres-Ortiz/week-2/src/components/: Header.tsx  RemittanceCard.tsx  RemittanceForm.tsx  RemittanceList.tsx
3171599-R-Camilo-Andres-Ortiz/week-2/src/styles/: App.css
3171599-R-Camilo-Andres-Ortiz/week-2/src/types/: index.ts
3171599-R-Camilo-Andres-Ortiz/week-3/: README.md  index.html  package.json  pnpm-lock.yaml
3171599-R-Camilo-Andres-Ortiz/week-3/src/components/: Dashboard.tsx  ItemList.tsx  RealTimeIndicator.tsx  StatsCard.tsx
3171599-R-Camilo-Andres-Ortiz/week-3/src/styles/: App.css
3171599-R-Camilo-Andres-Ortiz/week-3/src/types/: index.ts
3171599-R-Camilo-Andres-Ortiz/week-3/src/utils/: api.ts
3171599-R-Camilo-Andres-Ortiz/week-4/remittance-catalog/: README.md  index.html  package-lock.json  package.json
3171599-R-Camilo-Andres-Ortiz/week-4/remittance-catalog/src/: App.css  (+1 more)
my-react-app/: package.json  pnpm-lock.yaml
week_1_f/: Dockerfile
week_1_f/src/: main.py
weet-1/: README.md  package-lock.json  package.json  tsconfig.json
weet-1/starter/: index.ts
(+11 files in other folders)
