[project]
name = "remesas-internacionales-api"
version = "1.0.0"
description = "API de Sistema de Remesas Internacionales - Servicios Financieros y Fintech"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
